--- a/Sass/menu.scss
+++ b/Sass/menu.scss
@@ -125,6 +125,7 @@ span{
     justify-content: flex-end;
 }
 .ok{
+    display: flex;
     background-color: #99E2D0;
     width: 60px;
     position: absolute;
@@ -135,8 +136,6 @@ span{
     font-size: 19px;
     color: white;
     z-index: -1;
-    animation: slide;
-    transition: 1s;
 }
 .txtsticker{
     display: flex;
@@ -148,15 +147,15 @@ span{
     margin-right: 8px;
     box-shadow: 2px 3px rgb(231, 229, 229);
     margin-bottom: 10px;
+    cursor: pointer;
     &:active .ok{
         display: flex;
         z-index: 0;
         transform-origin: right 50%;
-        transition: 1s;
+        transition : 1s;
         width: 60px;
     }
     &:active .price{
-        display: flex;
         transition: 1s;
         transform: translate(-70px);
     }
@@ -319,7 +318,7 @@ h6{
         display: flex;
     }
     .proposition, .partnair, .mentions, .contact{
-        width: 185px;
+        width: 195px;
     }
 }
 
