--- a/Sass/style.css
+++ b/Sass/style.css
@@ -1,147 +1,116 @@
 @-webkit-keyframes opening {
   from {
-    -webkit-transform: translateY(150px);
-            transform: translateY(150px);
+    transform: translateY(150px);
     opacity: 0;
   }
   to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
-
 @keyframes opening {
   from {
-    -webkit-transform: translateY(150px);
-            transform: translateY(150px);
+    transform: translateY(150px);
     opacity: 0;
   }
   to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
-
 @-webkit-keyframes appear {
   to {
     visibility: visible;
   }
 }
-
 @keyframes appear {
   to {
     visibility: visible;
   }
 }
-
 @-webkit-keyframes spin {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
     opacity: 0;
   }
   50% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
     opacity: 1;
   }
   100% {
     visibility: hidden;
   }
 }
-
 @keyframes spin {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
     opacity: 0;
   }
   50% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
     opacity: 1;
   }
   100% {
     visibility: hidden;
   }
 }
-
 @-webkit-keyframes slide {
   0% {
-    -webkit-transform: translateX(-10px);
-            transform: translateX(-10px);
+    transform: translateX(-10px);
     opacity: 0;
   }
   50% {
-    -webkit-transform: translateX(30px);
-            transform: translateX(30px);
-    opacity: .5;
+    transform: translateX(30px);
+    opacity: 0.5;
   }
   100% {
-    -webkit-transform: translateX(60px);
-            transform: translateX(60px);
+    transform: translateX(60px);
     opacity: 1;
   }
 }
-
 @keyframes slide {
   0% {
-    -webkit-transform: translateX(-10px);
-            transform: translateX(-10px);
+    transform: translateX(-10px);
     opacity: 0;
   }
   50% {
-    -webkit-transform: translateX(30px);
-            transform: translateX(30px);
-    opacity: .5;
+    transform: translateX(30px);
+    opacity: 0.5;
   }
   100% {
-    -webkit-transform: translateX(60px);
-            transform: translateX(60px);
+    transform: translateX(60px);
     opacity: 1;
   }
 }
-
 @font-face {
-  font-family: 'Shrikhand';
+  font-family: "Shrikhand";
   src: url("shrikhand/Shrikhand-Regular.otf");
 }
-
 @font-face {
-  font-family: 'roboto_condensedbold';
+  font-family: "roboto_condensedbold";
   src: url("RobotoCondensed-Bold-webfont.eot");
   src: url("RobotoCondensed-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Bold-webfont.woff2") format("woff2"), url("RobotoCondensed-Bold-webfont.woff") format("woff"), url("RobotoCondensed-Bold-webfont.ttf") format("truetype"), url("RobotoCondensed-Bold-webfont.svg#roboto_condensedbold") format("svg");
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'roboto_condensedlight';
+  font-family: "roboto_condensedlight";
   src: url("RobotoCondensed-Light-webfont.eot");
   src: url("RobotoCondensed-Light-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Light-webfont.woff") format("woff"), url("RobotoCondensed-Light-webfont.ttf") format("truetype"), url("RobotoCondensed-Light-webfont.svg#roboto_condensedlight") format("svg");
   font-weight: normal;
   font-style: normal;
 }
-
 body {
-  font-family: 'roboto_condensedbold';
+  font-family: "roboto_condensedbold";
   font-weight: bold;
 }
 
 /*Header*/
 .header {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .logoheader {
@@ -152,30 +121,17 @@ body {
 
 /*Formulaire Location*/
 .containerlocation {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  flex-direction: column;
   border-top: #ebe7e7 solid 2px;
 }
 
 .location {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   position: relative;
   background-color: #F3F3F3;
   font-size: 16px;
@@ -194,8 +150,6 @@ body {
 
 /*1ere Section avec H1 et Bouton*/
 h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   text-align: center;
   font-size: 28px;
@@ -205,11 +159,9 @@ h1 {
 }
 
 h2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   text-align: center;
-  font-family: 'roboto_condensedlight';
+  font-family: "roboto_condensedlight";
   font-size: 16px;
   font-weight: normal;
   color: #8a8888;
@@ -225,49 +177,34 @@ h2 {
 }
 
 .movebtn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9408f1));
   background: linear-gradient(#FF79DA, #9408f1);
   border: none;
   color: white;
   text-decoration: none;
-  font-family: 'roboto_condensedlight';
+  font-family: "roboto_condensedlight";
   font-size: 15px;
   font-weight: normal;
   border-radius: 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-top: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 7px;
   padding-left: 7px;
-  -webkit-box-shadow: 1px 5px #c9c6c6;
-          box-shadow: 1px 5px #c9c6c6;
-  -webkit-transition: 2s;
+  box-shadow: 1px 5px #c9c6c6;
   transition: 2s;
 }
-
 .btn:hover {
   background: #FF79DA;
-  -webkit-box-shadow: 3px 7px #504d4d;
-          box-shadow: 3px 7px #504d4d;
-  -webkit-transition: .5s;
-  transition: .5s;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  box-shadow: 3px 7px #504d4d;
+  transition: 0.5s;
+  transform: scale(1.1);
 }
 
 /* 2eme Section Fonctionnement et 3 boutons*/
@@ -300,23 +237,13 @@ h3 {
 }
 
 .btnfonction {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
   background-color: #f9f8f8f6;
   border: none;
-  -webkit-box-shadow: 2px 3px #e7e5e5;
-          box-shadow: 2px 3px #e7e5e5;
+  box-shadow: 2px 3px #e7e5e5;
   text-decoration: none;
   color: black;
   font-size: 16px;
@@ -331,19 +258,10 @@ h3 {
 }
 
 .containerbtn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 p {
@@ -355,15 +273,9 @@ p {
   border-radius: 20px;
   width: 22px;
   height: 22px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 /*3eme section Restaurants*/
@@ -374,13 +286,8 @@ p {
 }
 
 .sticker {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   background-color: white;
   border-radius: 10px 10px 10px 10px;
   width: 97%;
@@ -388,8 +295,7 @@ p {
   margin-bottom: 25px;
   margin-top: -10px;
   overflow: hidden;
-  -webkit-box-shadow: #dddada 3px 3px;
-          box-shadow: #dddada 3px 3px;
+  box-shadow: #dddada 3px 3px;
 }
 
 .containerpic {
@@ -398,15 +304,9 @@ p {
 }
 
 .new {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   font-size: 15px;
   font-weight: bold;
   color: #0c8151;
@@ -431,16 +331,9 @@ h4 {
 }
 
 .txtheart {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .empty {
@@ -455,23 +348,20 @@ h4 {
 }
 
 .heart {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   font-size: 23px;
   margin-top: 12px;
   margin-right: 20px;
   text-decoration: none;
+  cursor: pointer;
 }
-
-.heart:hover .full {
+.heart:active .full {
   z-index: 1;
-  -webkit-transition: 3s;
   transition: 3s;
 }
 
 h5 {
-  font-family: 'roboto_condensedlight';
+  font-family: "roboto_condensedlight";
   font-size: 20px;
   font-weight: normal;
   margin-top: -25px;
@@ -480,15 +370,9 @@ h5 {
 }
 
 .txtrestaurants {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  flex-wrap: wrap;
   margin-top: 5px;
 }
 
@@ -498,7 +382,7 @@ h5 {
 }
 
 h6 {
-  font-family: 'shrikhand';
+  font-family: "shrikhand";
   color: white;
   font-size: 20px;
   font-weight: normal;
@@ -509,7 +393,7 @@ h6 {
 }
 
 .txtfooter {
-  font-family: 'roboto_condensedlight';
+  font-family: "roboto_condensedlight";
   font-size: 15px;
   font-weight: normal;
   color: white;
@@ -518,22 +402,16 @@ h6 {
 }
 
 .proposition, .partnair {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-bottom: 5px;
 }
 
 .ustensil {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-right: 10px;
 }
 
 .hands {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-right: 8px;
   font-size: 11px;
@@ -552,95 +430,89 @@ h6 {
 @media screen and (min-width: 500px) {
   /*Ipad*/
   h1 {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
+
   h2 {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
+
   .btn {
     width: 200px;
   }
+
   .picture {
     -o-object-fit: cover;
        object-fit: cover;
   }
+
   .new {
     left: 5px;
   }
+
   .txtrestaurants {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 @media screen and (min-width: 801px) {
   .location {
     height: 100px;
     padding-left: 120px;
     font-size: 35px;
   }
+
   .txtlocation {
     font-size: 35px;
   }
+
   h1 {
     font-size: 35px;
   }
+
   h2 {
     font-size: 35px;
   }
+
   .first {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
+
   .btn {
     width: 290px;
     font-size: 25px;
   }
+
   .btnfonction {
     width: 350px;
     font-size: 25px;
   }
+
   p {
     font-size: 30px;
     width: 35px;
     height: 35px;
   }
+
   .restaurants {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
+
   .sticker {
     width: 45%;
     margin-bottom: 50px;
     margin-right: 25px;
   }
+
   .new {
     width: 100px;
     height: 40px;
   }
+
   h3 {
     font-size: 40px;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
