--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -243,7 +243,8 @@ h4{
     margin-top: 12px;
     margin-right: 20px;
     text-decoration: none;
-    &:hover .full{
+    cursor: pointer;
+    &:active .full{
         z-index: 1;
         transition: 3s;
     }
