--- a/Sass/style.css
+++ b/Sass/style.css
@@ -54,34 +54,6 @@
     visibility: hidden;
   }
 }
-@-webkit-keyframes slide {
-  0% {
-    transform: translateX(-10px);
-    opacity: 0;
-  }
-  50% {
-    transform: translateX(30px);
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateX(60px);
-    opacity: 1;
-  }
-}
-@keyframes slide {
-  0% {
-    transform: translateX(-10px);
-    opacity: 0;
-  }
-  50% {
-    transform: translateX(30px);
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateX(60px);
-    opacity: 1;
-  }
-}
 @font-face {
   font-family: "Shrikhand";
   src: url("shrikhand/Shrikhand-Regular.otf");
@@ -224,6 +196,12 @@ h3 {
   position: relative;
 }
 
+.pic0 {
+  margin-right: 30px;
+  margin-left: 3px;
+  font-size: 20px;
+}
+
 .pic1 {
   margin-right: 33px;
   margin-left: 23px;
@@ -255,6 +233,10 @@ h3 {
   margin-bottom: 15px;
   margin-right: 10px;
   width: 255px;
+}
+.btnfonction:hover {
+  transition: 0.5s;
+  background-color: #f1e4ee;
 }
 
 .containerbtn {
@@ -338,13 +320,13 @@ h4 {
 
 .empty {
   position: relative;
-  z-index: 0;
+  opacity: 1;
+  -webkit-font-smoothing: antiliased;
 }
 
 .full {
   position: absolute;
-  z-index: -1;
-  color: #FF79DA;
+  opacity: 0;
 }
 
 .heart {
@@ -356,8 +338,9 @@ h4 {
   cursor: pointer;
 }
 .heart:active .full {
-  z-index: 1;
-  transition: 3s;
+  opacity: 2;
+  transition: 1s;
+  color: #FF79DA;
 }
 
 h5 {
@@ -514,5 +497,13 @@ h6 {
 
   h3 {
     font-size: 40px;
+  }
+
+  .txtfooter {
+    display: flex;
+  }
+
+  .proposition, .partnair, .mentions, .contact {
+    width: 195px;
   }
 }/*# sourceMappingURL=style.css.map */
