--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -137,6 +137,11 @@ h3{
     margin-left: 10px;
     position: relative;
 }
+.pic0{
+    margin-right: 30px;
+    margin-left: 3px;
+    font-size: 20px
+}
 .pic1{
     margin-right: 33px;
     margin-left: 23px;
@@ -163,7 +168,11 @@ h3{
     padding-left: 30px;
     margin-bottom: 15px;
     margin-right: 10px;
-    width: 255px
+    width: 255px;
+    &:hover{
+        transition: .5s;
+        background-color: #f1e4ee
+    }
 }
 .containerbtn{
     @include flexcenter;
@@ -228,14 +237,15 @@ h4{
     flex-direction: row;
     justify-content: space-between
 }
+
 .empty{
     position: relative;
-    z-index: 0;
+    opacity: 1;
+    -webkit-font-smoothing: antiliased;
 }
 .full{
     position: absolute;
-    z-index: -1;
-    color: $Secondary-color;
+    opacity: 0;
 }
 .heart {
     display: flex;
@@ -245,8 +255,9 @@ h4{
     text-decoration: none;
     cursor: pointer;
     &:active .full{
-        z-index: 1;
-        transition: 3s;
+        opacity: 2;
+        transition: 1s;
+        color: $Secondary-color;
     }
 }
 h5{
@@ -376,7 +387,15 @@ h5{
     h3{
         font-size: 40px;
     }
+    .txtfooter{
+        display: flex;
+    }
+    .proposition, .partnair, .mentions, .contact{
+        width: 195px;
+    }
 }
+
+
 
 
 
