--- a/Sass/style.css
+++ b/Sass/style.css
@@ -318,13 +318,41 @@ h4 {
   justify-content: space-between;
 }
 
+input[type=checkbox] {
+  display: none;
+}
+
+input[type=checkbox]:checked + .full {
+  opacity: 2;
+  transition: 1s;
+  color: #FF79DA;
+}
+
+input[type=checkbox]:checked + .full2 {
+  opacity: 2;
+  transition: 1s;
+  color: #FF79DA;
+}
+
+input[type=checkbox]:checked + .full3 {
+  opacity: 2;
+  transition: 1s;
+  color: #FF79DA;
+}
+
+input[type=checkbox]:checked + .full4 {
+  opacity: 2;
+  transition: 1s;
+  color: #FF79DA;
+}
+
 .empty {
   position: relative;
   opacity: 1;
   -webkit-font-smoothing: antiliased;
 }
 
-.full {
+.full, .full2, .full3, .full4 {
   position: absolute;
   opacity: 0;
 }
@@ -336,11 +364,6 @@ h4 {
   margin-right: 20px;
   text-decoration: none;
   cursor: pointer;
-}
-.heart:active .full {
-  opacity: 2;
-  transition: 1s;
-  color: #FF79DA;
 }
 
 h5 {
