--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -237,13 +237,27 @@ h4{
     flex-direction: row;
     justify-content: space-between
 }
-
+input[type="checkbox"]{
+    display: none;
+}
+input[type="checkbox"]:checked + .full{
+    @include check;
+}
+input[type="checkbox"]:checked + .full2{
+    @include check;
+}
+input[type="checkbox"]:checked + .full3{
+    @include check;
+}
+input[type="checkbox"]:checked + .full4{
+    @include check;
+}
 .empty{
     position: relative;
     opacity: 1;
     -webkit-font-smoothing: antiliased;
 }
-.full{
+.full, .full2, .full3, .full4{
     position: absolute;
     opacity: 0;
 }
@@ -254,11 +268,6 @@ h4{
     margin-right: 20px;
     text-decoration: none;
     cursor: pointer;
-    &:active .full{
-        opacity: 2;
-        transition: 1s;
-        color: $Secondary-color;
-    }
 }
 h5{
     font-family: 'roboto_condensedlight';
